Fix header on mobile and add h1 for seo

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,30 @@ blockquote {
   display: flex;
 }
 
+@media (max-width: 675px) {
+  .navbar-brand img {
+    width: 25px;
+    height: 25px;
+    display: block;
+  }
+  .nav-header {
+    font-size: 16px;
+  }
+  .navbar-toggler {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .navbar-toggler-icon {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 374px) {
+  .hide-sm {
+    display: none;
+  }
+}
+
 .nav-spacing {
   margin-right: 1em;
 }
@@ -57,6 +81,7 @@ blockquote {
   box-shadow: 2px 2px 2px rgb(167, 166, 166);
   background-color: var(--accent) !important;
   color: lightgray;
+  padding: 15px;
 }
 
 .header-text{
